# modbus-cli-rs

./: .dex.conf  .gitignore  Cargo.toml  LICENSE  README.md  config.json  config.toml
.github/workflows/: nightly.yml  release.yml
.woodpecker/: check.yml  nightly.yml
cli/: Cargo.toml
cli/src/: instance.rs  main.rs  module.rs
cli/src/instance/: builder.rs  config.rs  error.rs  handle.rs  mod.rs
cli/src/widgets/: color.rs  input_field.rs  mod.rs  selection.rs
configs/: config.toml
derive_focus/: Cargo.toml
derive_focus/examples/: widget.rs
derive_focus/src/: lib.rs
log/: Cargo.toml
log/src/: lib.rs
lua/: Cargo.toml
lua/src/: context.rs  lib.rs  script.rs  state.rs
lua/src/module/: mod.rs  statics.rs  time.rs
lua/src/module/register/: mod.rs  traits.rs
memory/: Cargo.toml
memory/src/: lib.rs  memory.rs  range.rs  slice.rs  value.rs
modbus/: Cargo.toml  config.json  config.toml
modbus-cli/: Cargo.toml
modbus-cli/src/: main.rs  module.rs  ui.rs
modbus-cli/src/dialog/: edit.rs  mod.rs
modbus-cli/src/dialog/edit/: input.rs  mod.rs  selection.rs
modbus-cli/src/instance/: builder.rs  config.rs  error.rs  handle.rs  mod.rs
modbus-derive/: Cargo.toml  README.md
modbus-derive/examples/: widget.rs
modbus-derive/src/: lib.rs
modbus-log/: Cargo.toml  README.md
modbus-lua/: Cargo.toml  README.md
modbus-lua/src/: builder.rs  script.rs
modbus-mem/: Cargo.toml  README.md
modbus-mem/src/: lib.rs  memory.rs  range.rs  slice.rs  value.rs
modbus-net/: Cargo.toml  README.md
modbus-net/src/: lib.rs
modbus-net/src/rtu/: client.rs  mod.rs  server.rs
modbus-net/src/tcp/: client.rs  server.rs
modbus-reg/: Cargo.toml  README.md
modbus-reg/src/: enums.rs  format.rs  lib.rs  value.rs
modbus-ui/: Cargo.toml  README.md
modbus-ui/examples/: dialog.rs  input_field.rs  selection.rs  table.rs
modbus-ui/src/: lib.rs  screen.rs  traits.rs  types.rs
modbus-ui/src/state/: input_field.rs  selection.rs  table.rs
modbus-ui/src/style/: input_field.rs  mod.rs  selection.rs  table.rs  text.rs
modbus-ui/src/widgets/: input_field.rs  mod.rs  selection.rs  table.rs  text.rs
modbus-util/: Cargo.toml  README.md
modbus-util/src/: convert.rs  lib.rs  tokio.rs
modbus/src/: cli.rs  config.rs  main.rs  msg.rs  register.rs
modbus/src/mem/: format.rs  handler.rs  memory.rs  mod.rs  range.rs  slice.rs
modbus/src/net/: mod.rs
modbus/src/net/rtu/: client.rs  mod.rs  server.rs
modbus/src/net/tcp/: client.rs  mod.rs
modbus/src/sync/: channel.rs  mod.rs
modbus/src/ui/: mod.rs
modbus/src/ui/widgets/: mod.rs
modbus/src/util/: convert.rs  mod.rs
modbus/tests/: memory_test.rs
net/: Cargo.toml
net/src/: lib.rs
net/src/rtu/: client.rs  mod.rs  server.rs
net/src/tcp/: client.rs  mod.rs  server.rs
register/: Cargo.toml
register/src/: format.rs  lib.rs  traits.rs  value.rs
src/: input.rs  lua.rs  main.rs  memory.rs  modbus.rs  msg.rs  register.rs  test.rs  tokio.rs  types.rs  ui.rs  util.rs
src/lua/: context.rs  mod.rs
src/lua/module/: mod.rs  register.rs  time.rs
src/lua/namespace/: mod.rs  register.rs  time.rs
src/mem/: data.rs  datav2.rs  memory.rs  mod.rs  register.rs  value.rs
src/rtu/: client.rs  mod.rs  server.rs
src/tcp/: client.rs  mod.rs  server.rs
src/util/: mod.rs
src/widgets/: edit_dialog.rs  input_field.rs  mod.rs  selection.rs
ui/: Cargo.toml
ui/examples/: dialog.rs  input_field.rs  selection.rs  table.rs
ui/src/: lib.rs  style.rs  traits.rs  types.rs
ui/src/state/: input_field.rs  mod.rs  selection.rs  table.rs
ui/src/style/: input_field.rs  mod.rs  selection.rs  table.rs
ui/src/widget/: input_field.rs
ui/src/widgets/: input_field.rs  mod.rs  selection.rs  table.rs
util/: Cargo.toml
util/src/: convert.rs  lib.rs  tokio.rs
