[package]
name = "modbus-cli-rs"
version = "0.3.5"
edition = "2021"
authors = ["David Loewe <49597367+TumbleOwlee@users.noreply.github.com>"]

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
byteorder = "1.5.0"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
crossterm = "0.29.0"
futures-util = "0.3.32"
itertools = "0.14.0"
mlua = { version = "0.11.6", features = ["anyhow", "lua54", "vendored"] }
once_cell = "1.21.3"
ratatui = { version = "0.30.0", features = ["all-widgets", "unstable-widget-ref"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["time"] }
tokio-modbus = { version = "0.17.0", features = ["tcp-server", "rtu-server", "futures-util"] }
tokio-serial = "5.4.5"
toml = "1.0.4"
unicode-width = "0.2.2"
