[package]
name = "cli"
version = "0.1.0"
edition = "2024"
authors = ["David Loewe <49597367+TumbleOwlee@users.noreply.github.com>"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
crossterm = "0.29.0"
ui = { path = "../ui" }
log = { path = "../log" }
lua = { path = "../lua" }
memory = { path = "../memory" }
net = { path = "../net" }
ratatui = { version = "0.30.0", features = ["all-widgets", "unstable-widget-ref"] }
register = { path = "../register" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["sync", "time", "rt"] }
toml = "0.9.11"
util = { path = "../util" }
