[package]
name = "util"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
clap = { version = "4.5.54", features = ["derive"] }
futures-util = "0.3.31"
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt", "sync", "time"] }
toml = "0.9.11"
